--- a/public/img/icons/manifest.json
+++ b/public/img/icons/manifest.json
@@ -1,56 +1,94 @@
 {
  "name": "Raven Mobile Auto and RV",
  "short_name": "RavenAuto",
- "description": "Raven Mobile Auto and RV provides a wide range of automotive repair services for your auto or recreational vehicle.",
+ "description": "Raven Mobile Auto and RV provides a wide range of repair services for your auto or recreational vehicle.",
  "start_url": ".",
  "display": "standalone",
  "background_color": "#696969",
  "theme_color": "#1976d2",
  "icons": [
   {
-   "src": "img/icons/android-chrome-192x192.png",
+   "src": "img/icons/android-icon-144x144.png",
+   "sizes": "144x144",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/android-icon-192x192.png",
    "sizes": "192x192",
    "type": "image/png"
   },
   {
-   "src": "img/icons/android-chrome-512x512.png",
-   "sizes": "512x512",
+   "src": "img/icons/android-icon-36x36.png",
+   "sizes": "36x36",
    "type": "image/png"
   },
   {
-   "src": "img/icons/android-chrome-maskable-192x192.png",
-   "sizes": "192x192",
-   "type": "image/png",
-   "purpose": "maskable"
-  },
-  {
-   "src": "img/icons/android-chrome-maskable-512x512.png",
-   "sizes": "512x512",
-   "type": "image/png",
-   "purpose": "maskable"
-  },
-  {
-   "src": "img/icons/apple-touch-icon-60x60.png",
-   "sizes": "60x60",
+   "src": "img/icons/android-icon-48x48.png",
+   "sizes": "48x48",
    "type": "image/png"
   },
   {
-   "src": "img/icons/apple-touch-icon-76x76.png",
-   "sizes": "76x76",
+   "src": "img/icons/android-icon-72x72.png",
+   "sizes": "72x72",
    "type": "image/png"
   },
   {
-   "src": "img/icons/apple-touch-icon-120x120.png",
+   "src": "img/icons/android-icon-96x96.png",
+   "sizes": "96x96",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/apple-icon.png",
+   "sizes": "180x180",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/apple-icon-114x114.png",
+   "sizes": "114x114",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/apple-icon-120x120.png",
    "sizes": "120x120",
    "type": "image/png"
   },
   {
-   "src": "img/icons/apple-touch-icon-152x152.png",
+   "src": "img/icons/apple-icon-144x144.png",
+   "sizes": "144x144",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/apple-icon-152x152.png",
    "sizes": "152x152",
    "type": "image/png"
   },
   {
-   "src": "img/icons/apple-touch-icon-180x180.png",
+   "src": "img/icons/apple-icon-180x180.png",
+   "sizes": "180x180",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/apple-icon-57x57.png",
+   "sizes": "57x57",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/apple-icon-60x60.png",
+   "sizes": "60x60",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/apple-icon-72x72.png",
+   "sizes": "72x72",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/apple-icon-76x76.png",
+   "sizes": "76x76",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/apple-icon-precomposed.png",
    "sizes": "180x180",
    "type": "image/png"
   },
@@ -70,11 +108,6 @@
    "type": "image/png"
   },
   {
-   "src": "img/icons/ms-icon-70x70.png",
-   "sizes": "70x70",
-   "type": "image/png"
-  },
-  {
    "src": "img/icons/ms-icon-144x144.png",
    "sizes": "144x144",
    "type": "image/png"
@@ -88,6 +121,22 @@
    "src": "img/icons/ms-icon-310x310.png",
    "sizes": "310x310",
    "type": "image/png"
+  },
+  {
+   "src": "img/icons/ms-icon-70x70.png",
+   "sizes": "70x70",
+   "type": "image/png"
+  },
+  {
+   "src": "img/icons/favicon.svg",
+   "sizes": "any",
+   "type": "image/svg+xml"
+  },
+  {
+   "src": "img/icons/safari-pinned-tab.svg",
+   "sizes": "any",
+   "type": "image/svg+xml",
+   "purpose": "maskable"
   }
  ]
 }
